# opilio-firmware

./: .embed.toml  .gitattributes  .gitignore  Cargo.toml  LICENCE.md  README.md  flash.sh  memory.x  rustfmt.toml
.cargo/: config.toml
opilio_pcb/: fp-info-cache  opilio3.kicad_prl  opilio3.kicad_sch
opilio_pcb/v3/: opilio3.kicad_pcb  opilio3.kicad_prl  opilio3.kicad_pro  opilio3.kicad_sch
opilio_pcb/v3.1/: fp-info-cache  opilio3.1.kicad_pcb  opilio3.1.kicad_prl  opilio3.1.kicad_pro  opilio3.1.kicad_sch  opilio3.kicad_pcb  opilio3.kicad_prl  opilio3.kicad_sch
opilio_pcb/v3.2/: fp-info-cache  opilio3.2.kicad_pcb  opilio3.2.kicad_prl  opilio3.2.kicad_pro  opilio3.2.kicad_sch
opilio_pcb/v3.2/bom/: ibom.html
opilio_pcb/v3.3/: fp-info-cache  opilio3.3.kicad_pcb  opilio3.3.kicad_prl  opilio3.3.kicad_sch
opilio_pcb/v3.3/bom/: ibom.html
opilio_pcb/v4.0/: fp-info-cache  opilio4.0.kicad_pcb  opilio4.0.kicad_prl  opilio4.0.kicad_pro  opilio4.0.kicad_sch
opilio_pcb/v4.0/bom/: ibom.html
src/: consts.rs  controller.rs  lib.rs  main.rs  models.rs  serial_handler.rs  tacho.rs
