[package]
name = "opilio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
# cortex-m-rt = "0.7"
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# hal dependencies
embedded-hal = "0.2.3"
heapless = "0.7"
micromath = "2.0"
nb = "1.0"
postcard = "0.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
stm32f1xx-hal = { version = "0.8", features = [
    "rt",
    "stm32f103",
    "medium",
    "stm32-usbd",
] }
usb-device = "0.2.3"
usbd-serial = "0.1.0"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = true
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
