[package]
name = "opilio_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.1"
systick-monotonic = "1.0"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# hal dependencies
embedded-hal = "0.2"
heapless = { version = "0.7", features = ["defmt-impl"] }
micromath = "2.0"
postcard = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
stm32f1xx-hal = { version = "0.9", features = [
    "rt",
    "stm32f103",
    "medium",
    "stm32-usbd",
] }
usb-device = "0.2"
usbd-serial = "0.1"
opilio-lib = { path = "../opilio/opilio-lib" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true


# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
